--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -7,7 +7,7 @@ jobs:
       - name: print greeting
         run: echo "Hello world!"
       - name: install node version 16
-      - uses: actions/setup-node@v4
+        uses: actions/setup-node@v4
         with:
           node-version-file: 16
       - name: node version
