bug fix node 14

--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -9,7 +9,7 @@ jobs:
       - name: install node version 16
         uses: actions/setup-node@v4
         with:
-          node-version-file: "16"
+          node-version-file: 14
       - name: node version
         run: echo $(node -v)
       - name: print bye
